# game-of-life

./: Cargo.toml  README.md  package-lock.json
src/: lib.rs  stages.rs
src/shaders/: frag.glsl
src/shaders/render/: frag.glsl
src/shaders/state/: frag.glsl
