[package]
name = "game_of_life"
version = "1.0.0"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.52"
wasm-bindgen = "0.2.75"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlBodyElement',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]
